Fix action button siblings wrapping

--- a/src/css/layout/page.less
+++ b/src/css/layout/page.less
@@ -53,6 +53,11 @@
 .page-content {
   align-self: center;
   width: 100%;
+}
+
+.section-body {
+  margin: 0 auto;
+  width: 100%;
 
   .page-small & {
     max-width: 350px;
