--- a/src/css/pages/begin.less
+++ b/src/css/pages/begin.less
@@ -8,6 +8,10 @@
 .page-begin {
   padding-bottom: @fixed-footer-height;
 
+  .page-content {
+    max-width: 500px;
+  }
+
   .icon {
     height: auto;
     width: 100px;
